	-ChangeLog spelling fixes
	-Targets can now be easily added simply by adding them to the options
	 directory and passing the filename (minus .cfg) to buildcross.sh
	-KOS now uses cp instead of ln by default
	-Use a sane location for KOS's download location

Version 1.8.1:
	-Remove a bad option passed to Dreamcast's newlib

Version 1.8.2:
	-Update KOS & ports to new Sourceforge git url.
	-Fixed bug in GDB patching.

Version 1.9:
	-Gcc 4.7.0 removed per-language tarballs, so we're using the single
	 tarball across the board now.
	-Bumped Dreamcast GCC version to 4.7.1 and newlib to 1.20.0. Also, the ARM
	 cross compiller is now using arm-eabi instead of arm-elf since arm-elf is
	 considered deprecated in GCC 4.7.0 and will likely be removed in 4.8.0.
	-Switched to KOS's git tree.
	-Add check for git to checkdeps.
	-Fixed where .kos-download and .kos-ports-download end up.
	-Add checks for common C libraries that need to be installed (GMP, MPFR,
	 & MPC.) This involved finally writing the function to check gcc
	 compilation for a header.
	-Fix silent so it's still in color (since there's an option to remove color)
	-Fixed Linux kernel downloading for > 2.6 kernels.
	-Bumped Dreamcast Linux versions: GCC 4.7.1, Binutils 2.22, GDB 7.4,
	 Linux 3.4.3, uClibc 0.9.33.2, glibc 2.15 (does not work.)
	-Changed Dreamcast Linux's options and added objc & obj-c++ to build.
	-Bumped Didj uClibc toolchain versions: GCC 4.7.1, Binutils 2.22,
	 GDB 7.4.1, & uClibc 0.9.33.2. Pulled in uClibc toolchain patches for toolchain.
	-Bumped Saturn versions: GCC 4.7.1, Binutils 2.22, NewLib 1.20.0, GDB 7.4.
	-Updated Saturn build flags to better represent building a compiler to use
	 without using illegal libraries from the SDK.
	-Added MSP430 as a target: GCC 4.7.0, Binutils 2.22, GDB 7.2a.
	-Added Z80 as a target: Binutils only.
	-Updated template to have SYSTEM option.
	-Fix bug in GDB patching.
	-Update KOS & ports to new Sourceforge git url.
	-Update Dreamcast versions for KOS 2.0.0.